refactor: 커스텀 예외 처리 추가